# agentic-helper

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agent/: config.py  graph.py  guardrails.py  nodes.py  state.py
agentic_helper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
logs/: cli_session_20260326_155927.jsonl  cli_session_20260326_160435.jsonl
memory/: schema.py  store.py
scripts/: run_cli.py
tests/: test_graph.py  test_tool_registry.py
tools/: __init__.py  browser.py  calculator.py  calendar_tool.py  datetime_tool.py  directory.py  email_tool.py  memory.py  registry.py  task_store.py  task_tool.py
ui/: server.py
ui/static/: app.js  index.html  styles.css
workspace/: memory.json
