[project]
name = "agentic-helper"
version = "0.1.0"
description = "A modular agentic framework built with LangGraph and Gemini"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "playwright>=1.40.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "faiss-cpu>=1.7.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["agent*", "tools*", "ui*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
